--- a/index.html
+++ b/index.html
@@ -1287,7 +1287,7 @@
         
         <div class="footer-bottom-container container">
             <div class="footer-bottom">
-                <div class="copyright-text wow fadeInLeft" data-wow-delay=".1s" data-offset="50">
+                <div class="copyright-text">
                     <p class="copy-text">&copy; 2023 Didar Yanar Akademi - Tüm Hakları Saklıdır.</p>
                 </div>
     
